Remove the 'live from SM' and versions blocks from the admin home.

--- a/Themes/default/css/responsive.css
+++ b/Themes/default/css/responsive.css
@@ -785,7 +785,7 @@
 		display: none;
 	}
 	/* Admin */
-	#live_news, #support_info {
+	#support_info {
 		width: 100%;
 		padding: 0;
 		margin: 0 0 5px 0;
