--- a/Themes/default/css/admin.css
+++ b/Themes/default/css/admin.css
@@ -102,15 +102,7 @@ legend {
 }
 
 /* Cleaned this up a bit for less clutter.
-/* Admin and moderation could generally do with a clean up everywhere.
-/* Live news from smorg and support information. */
-#live_news, #support_info {
-	width: 70%;
-}
-#support_info {
-	width: 30%;
-	padding-left: 6px;
-}
+/* Admin and moderation could generally do with a clean up everywhere. */
 #admin_main_section {
 	overflow: auto;
 }
@@ -119,20 +111,6 @@ legend {
 	border-radius: 0;
 	height: 12em;
 	overflow: auto;
-}
-#smfAnnouncements dt {
-	padding: 4px 6px 2px 6px;
-	border-top: 1px solid #bf6900;
-}
-#smfAnnouncements dt a {
-	color: #bf6900;
-	font-weight: bold;
-	display: block;
-}
-#smfAnnouncements dd {
-	margin: 0;
-	padding: 6px 12px;
-	border-top: double #ddd;
 }
 
 fieldset.admin_group legend {
