Fix more mentions of SMF.

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -1167,7 +1167,7 @@ h1.forumtitle a {
 	padding-right: 2px;
 	font-size: 1.4em;
 }
-/* Tweak the SMF logo */
+/* Tweak the Social Bricks logo */
 img#smflogo {
 	margin: 16px 0 0 0;
 }
