--- a/Themes/default/css/jquery.sceditor.css
+++ b/Themes/default/css/jquery.sceditor.css
@@ -593,7 +593,7 @@ div.sceditor-group {
 	left: 0;
 }
 
-/* SMF buttons styles */
+/* Social Bricks buttons styles */
 .sceditor-button-pre div {
 	background-position: 0 -696px;
 }
