--- a/Themes/default/css/rtl.css
+++ b/Themes/default/css/rtl.css
@@ -132,7 +132,7 @@ h1.forumtitle {
 #siteslogan, img#smflogo {
 	float: left;
 }
-/* Tweak the SMF logo */
+/* Tweak the Social Bricks logo */
 img#smflogo {
 	margin-right: 1em;
 }
