--- a/Themes/default/templates/components/form.twig
+++ b/Themes/default/templates/components/form.twig
@@ -1,4 +1,4 @@
-	<form action="{{ form_action }}" method="post" accept-charset="UTF-8">
+	<form{% if id %} id="{{ id }}"{% endif %} action="{{ form_action }}" method="post" accept-charset="UTF-8">
 		{{ slot }}
 		{{ csrf() }}
 		{% if token %}
