--- a/Themes/default/templates/components/panel/heading.twig
+++ b/Themes/default/templates/components/panel/heading.twig
@@ -1,3 +1,3 @@
 	<div class="cat_bar">
-		<h3 class="catbg">{{ slot }}</h3>
+		<h3 class="catbg">{% if help %}<x-help :link="help" /> {% endif %}{{ slot }}</h3>
 	</div>
